--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Imgur</title>
+    <title>Imgur: The magic of the Internet</title>
     <link rel="icon" href="https://s.imgur.com/images/favicon-32x32.png" />
 
     <script
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/bannerCard.css" />
     <link rel="stylesheet" href="./styles/postCard.css">
-
+    <script src="https://cdn.jsdelivr.net/npm/macy@2"></script>
   </head>
   <body>
     <div class="Container">
